# EndtoEnd-Airbnb-Project

./: .gitignore  .user.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
Data/: bookings.csv  hosts.csv
config/: airflow.cfg
dags/: dbt_pipeline_dag.py
endtoend_airbnb_project/: .gitignore  .user.yml  dbt_project.yml
endtoend_airbnb_project/Reports/: bookings_profile.html
endtoend_airbnb_project/analyses/: data_profiling.ipynb  listings_profile.html
endtoend_airbnb_project/analyses/.ipynb_checkpoints/: data_profiling-checkpoint.ipynb  hosts_profile-checkpoint.html  listings_profile-checkpoint.html
endtoend_airbnb_project/macros/: multiply.sql  tag.sql
endtoend_airbnb_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql  bronze_properties.yml
endtoend_airbnb_project/models/gold/: fact.sql  obt.sql
endtoend_airbnb_project/models/gold/ephemeral/: bookings.sql  hosts.sql  listings.sql
endtoend_airbnb_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql  silver_properties.yml
endtoend_airbnb_project/models/source/: source.yml
endtoend_airbnb_project/snapshots/: dim_bookings.yml  dim_listings.yml
